Issue #170: Force Close when switching views with Genre category
A force close would occur when the Genre was selected and subcategory was
not being saved or passed.  Also the code was not taking into account the
secondary level to make sure the secondary category would be refreshed.

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -45,7 +45,7 @@
             android:text="@string/category" />
 
         <Spinner
-            android:id="@+id/movieCategoryFilter"
+            android:id="@+id/categoryFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -54,12 +54,12 @@
             android:gravity="left"
             android:nextFocusDown="@+id/moviePosterGallery"
             android:nextFocusLeft="@+id/menu_button"
-            android:nextFocusRight="@+id/movieCategoryFilter2"
+            android:nextFocusRight="@+id/categoryFilter2"
             android:prompt="@string/movie_category_prompt"
             android:spinnerMode="dropdown" />
 
         <Spinner
-            android:id="@+id/movieCategoryFilter2"
+            android:id="@+id/categoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
