--- a/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
@@ -39,7 +39,7 @@
             android:text="@string/category" />
 
         <Spinner
-            android:id="@+id/movieCategoryFilter"
+            android:id="@+id/categoryFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -50,7 +50,7 @@
             android:spinnerMode="dropdown" />
 
         <Spinner 
-            android:id="@+id/movieCategoryFilter2"
+            android:id="@+id/categoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
