--- a/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -35,7 +35,7 @@
             android:text="@string/category" />
 
         <Spinner
-            android:id="@+id/tvshow_CategoryFilter"
+            android:id="@+id/categoryFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -46,7 +46,7 @@
             android:spinnerMode="dropdown" />
 
         <Spinner
-            android:id="@+id/tvshow_movieCategoryFilter2"
+            android:id="@+id/categoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
