--- a/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -36,7 +36,7 @@
             android:text="@string/category" />
 
         <Spinner
-            android:id="@+id/tvshow_CategoryFilter"
+            android:id="@+id/categoryFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -47,7 +47,7 @@
             android:spinnerMode="dropdown" />
 
         <Spinner
-            android:id="@+id/tvshow_movieCategoryFilter2"
+            android:id="@+id/categoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
