Issue #174: Fix focus and sliding menu for devices connected to a TV
Some HDMI sticks don't identify themselves and Android TV devices.  To work
around this, added a preference option that can be toggled to let the app
it is in TV mode.  Google TV and Android TV related devices get this set
automatically.

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -191,7 +191,7 @@
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:nextFocusUp="@+id/menu_button"
+            android:nextFocusUp="@+id/categoryFilter"
             android:spacing="25dp" >
 
             <requestFocus />
