Add Episode Preview preference setting.
Allow the user to select whether Episode previews are searched for on you
tube or not.  In many cases youtube doesn't find relevant previews so it is
better to set this to disabled by default.  Movie trailers are more reliable.

--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -75,6 +75,10 @@
             android:key="movie_layout_grid"
             android:summary="@string/poster_grid_layout_for_movies_"
             android:title="@string/movie_grid_poster_layout" />
+        <CheckBoxPreference android:key="episode_trailers"
+            android:title="Enable Episode Previews"
+            android:summary="When enabled the app will try and search YouTube for episode promos and previews. Disable if you are not finding relevant trailers from YouTube."
+            android:defaultValue="false"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/animations" >
         <CheckBoxPreference
