--- a/serenity-app/res/layout-large/video_playback.xml
+++ b/serenity-app/res/layout-large/video_playback.xml
@@ -22,4 +22,14 @@
         android:visibility="invisible"
         style="@android:style/TextAppearance.Large"/>
 
+    <us.nineworlds.serenity.ui.views.TextClock
+            android:id="@+id/time_of_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:visibility="gone"/>
+
 </RelativeLayout>
