--- a/serenity-app/res/drawable/episode_count_background.xml
+++ b/serenity-app/res/drawable/episode_count_background.xml
@@ -2,6 +2,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
-    <solid android:color="@color/orange"/>
+    <solid android:color="@color/holo_color"/>
 
 </shape>
