Remove pom # Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch SmartPlayButton # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   serenity-app/pom.xml # # Untracked files: #   (use "git add <file>..." to include in what will be committed) # #	.idea/ #	leftnavbarlibrary/leftnavbarlibrary.iml #	plexapp-rest-library/plexapp-rest-library.iml #	serenity-app/serenity-app.iml #	serenity-parent.iml #	subtitle-converter/subtitle-converter.iml #	tests/plexapp-tests-parent.iml #	tests/serenity-app-tests/serenity-app-tests.iml

--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -128,6 +128,30 @@
             android:title="@string/preferred_external_player" />
         
     </PreferenceCategory>
+    <PreferenceCategory android:title="@string/Controls">
+        <ListPreference
+            android:key="skip_forward_time"
+            android:title="@string/skip_forward_time_title"
+            android:summary="@string/skip_forward_time_summary"
+            android:entries="@array/skipListNames"
+            android:entryValues="@array/skipListValues"
+            android:defaultValue="30"/>
+        <ListPreference
+            android:key="skip_backward_time"
+            android:title="@string/skip_backward_time_title"
+            android:summary="@string/skip_backward_time_summary"
+            android:entries="@array/skipListNames"
+            android:entryValues="@array/skipListValues"
+            android:defaultValue="10"/>
+        <ListPreference
+                android:key="next_prev_behavior"
+            android:title="@string/next_prev_behavior_title"
+            android:summary="@string/next_prev_behavior_summary"
+            android:entries="@array/nextPrevNames"
+            android:entryValues="@array/nextPrevValues"
+            android:defaultValue="10"/>
+
+    </PreferenceCategory>
     <PreferenceCategory android:title="@string/preference_remote_control" >
         <CheckBoxPreference
             android:defaultValue="true"
