--- a/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -13,18 +13,18 @@
         android:layout_height="wrap_content"
         android:background="#A0000000"
         android:orientation="horizontal" >
-        
-        <ImageButton android:id="@+id/menu_button"
-        android:layout_width="wrap_content"
-        android:paddingRight="10dp"
-        android:paddingLeft="5dp"
-        android:layout_height="28dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/menudrawer_selector"
-        android:layout_gravity="center_vertical"
-        android:scaleType="fitXY"
-        />
-        
+
+        <ImageButton
+            android:id="@+id/menu_button"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:paddingLeft="5dp"
+            android:paddingRight="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/menudrawer_selector" />
+
         <TextView
             android:id="@+id/tvshow_CategoryName"
             style="@android:style/TextAppearance.Holo.Medium"
@@ -70,144 +70,106 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/video_details_container"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvLine1"
-        android:background="#A0000000"
-        android:orientation="vertical" >
+        android:layout_centerHorizontal="true"
+        android:background="#AA000000"
+        android:padding="10dp" >
+
+        <ImageView
+            android:id="@+id/tvShowImage"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="5dp" />
 
         <LinearLayout
-            android:id="@+id/tvShowInfo"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvmetadata"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="30dp"
-            android:orientation="vertical" >
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/tvShowImage"
+            android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/tvShowImage"
-                android:layout_width="410dp"
-                android:layout_height="210dp"
-                android:layout_gravity="center_horizontal"
-                android:background="#F0F0F0"
-                android:padding="2dp"
-                android:scaleType="fitXY"
-                android:visibility="gone"
-                tools:ignore="ContentDescription" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="600dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="30dp"
-            android:layout_toRightOf="@+id/tvShowInfo"
-            android:orientation="vertical" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/tvShowRating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dip"
-                    android:layout_marginRight="5dip" />
-
-                <ImageView
-                    android:id="@+id/tvShowStudio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dip"
-                    android:layout_marginLeft="15dip"
-                    android:layout_marginRight="10dip" />
-
-                <RatingBar
-                    android:id="@+id/tvRatingbar"
-                    style="?android:attr/ratingBarStyleIndicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:numStars="4"
-                    android:stepSize="0.1" >
-                </RatingBar>
-            </LinearLayout>
-
-            <LinearLayout
+                android:id="@+id/tvShowRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:layout_marginBottom="5dip"
+                android:layout_marginRight="5dip" />
 
-                <TextView
-                    android:id="@+id/tvBrowserTitle"
-                    style="@android:style/TextAppearance.Holo.Large"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:textColor="#F0F0F0"
-                    android:textStyle="bold"
-                    tools:ignore="SelectableText" >
-                </TextView>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvShowSeriesSummary"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="5dp"
-                android:gravity="top"
-                android:maxLines="7"
-                android:textColor="#F0F0F0"
-                tools:ignore="SelectableText" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/tvShowBrowserGenre"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="fill_parent"
+            <RatingBar
+                android:id="@+id/tvRatingbar"
+                style="?android:attr/ratingBarStyleIndicator"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:textColor="#F0F0F0"
-                tools:ignore="SelectableText" >
-            </TextView>
+                android:numStars="4"
+                android:stepSize="0.1" >
+            </RatingBar>
 
-            <TextView
-                android:id="@+id/tvShowWatchedUnwatched"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="fill_parent"
+            <ImageView
+                android:id="@+id/tvShowStudio"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:textColor="#F0F0F0"
-                tools:ignore="SelectableText" >
-            </TextView>
+                android:layout_marginBottom="5dip"
+                android:layout_marginLeft="15dip"
+                android:layout_marginRight="10dip" />
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvBrowserTitle"
+            style="@android:style/TextAppearance.Holo.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvmetadata"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/tvShowImage"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="10dp"
+            android:textColor="#F0F0F0"
+            android:textStyle="bold"
+            tools:ignore="SelectableText" />
+
+        <TextView
+            android:id="@+id/tvShowSeriesSummary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical" >
-
-            <Gallery
-                android:id="@+id/tvShowBannerGallery"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:animationDuration="1"
-                android:background="#50000000"
-                android:padding="5dp"
-                android:spacing="10dp" >
-
-                <requestFocus />
-            </Gallery>
-        </LinearLayout>
+            android:layout_below="@+id/tvBrowserTitle"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/tvShowImage"
+            android:ellipsize="marquee"
+            android:maxLines="8"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="#F0F0F0"
+            android:textSize="17.5sp"
+            tools:ignore="SelectableText" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical" >
+
+        <Gallery
+            android:id="@+id/tvShowBannerGallery"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:animationDuration="1"
+            android:background="#50000000"
+            android:padding="5dp"
+            android:spacing="10dp" >
+
+            <requestFocus />
+        </Gallery>
+    </LinearLayout>
 
 </RelativeLayout>
