--- a/serenity-app/res/layout-large/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_posters.xml
@@ -70,21 +70,30 @@
         </TextView>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/video_details_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvLine1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp"
-        android:background="#A0000000"
-        android:orientation="vertical" >
+        android:layout_centerHorizontal="true"
+        android:background="#AA000000"
+        android:padding="10dp" >
+
+        <ImageView
+            android:id="@+id/tvShowImage"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="5dp" />
 
         <LinearLayout
+            android:id="@+id/tvmetadata"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/tvShowImage"
             android:orientation="horizontal" >
 
             <ImageView
@@ -94,73 +103,55 @@
                 android:layout_marginBottom="5dip"
                 android:layout_marginRight="5dip" />
 
-            <ImageView
-                android:id="@+id/tvShowStudio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
             <RatingBar
                 android:id="@+id/tvRatingbar"
+                style="?android:attr/ratingBarStyleIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="4"
-                android:stepSize="0.1"
-                style="?android:attr/ratingBarStyleIndicator" >
+                android:stepSize="0.1" >
             </RatingBar>
+
+            <ImageView
+                android:id="@+id/tvShowStudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dip"
+                android:layout_marginLeft="15dip"
+                android:layout_marginRight="10dip" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/tvBrowserTitle"
             style="@android:style/TextAppearance.Holo.Large"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
-            android:gravity="left"
+            android:layout_below="@+id/tvmetadata"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/tvShowImage"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="10dp"
             android:textColor="#F0F0F0"
             android:textStyle="bold"
-            tools:ignore="SelectableText" >
-        </TextView>
+            tools:ignore="SelectableText" />
 
         <TextView
             android:id="@+id/tvShowSeriesSummary"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
-            android:layout_marginTop="2dp"
-            android:gravity="top"
-            android:maxLines="7"
-            android:textColor="#F0F0F0"
-            tools:ignore="SelectableText" >
-        </TextView>
-
-        <TextView
-            android:id="@+id/tvShowBrowserGenre"
-            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
+            android:layout_below="@+id/tvBrowserTitle"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/tvShowImage"
+            android:ellipsize="marquee"
+            android:maxLines="8"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:textColor="#F0F0F0"
-            tools:ignore="SelectableText" >
-        </TextView>
-
-        <TextView
-            android:id="@+id/tvShowWatchedUnwatched"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dip"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:textColor="#F0F0F0"
-            tools:ignore="SelectableText" >
-        </TextView>
-    </LinearLayout>
+            android:textSize="17.5sp"
+            tools:ignore="SelectableText" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
