--- a/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -93,6 +93,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_toRightOf="@+id/tvShowImage"
+            android:layout_alignBottom="@+id/tvShowImage"
             android:orientation="horizontal" >
 
             <ImageView
@@ -125,7 +126,6 @@
             style="@android:style/TextAppearance.Holo.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvmetadata"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_toRightOf="@+id/tvShowImage"
