--- a/serenity-app/res/layout-large/activity_plex_app_main.xml
+++ b/serenity-app/res/layout-large/activity_plex_app_main.xml
@@ -5,60 +5,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity" >
-    
-    <ImageView android:id="@+id/mainGalleryBackground" 
+
+    <ImageView
+        android:id="@+id/mainGalleryBackground"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:scaleType="fitXY"
-        android:src="@drawable/serenity_bonsai_logo"/>
-    
-    
-    
+        android:src="@drawable/serenity_bonsai_logo" />
+
     <DigitalClock
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/fity_percent_transparent"
-            android:textColor="#F0F0F0"
-            android:layout_toRightOf="@+id/menu_button"
-            android:layout_alignParentTop="true"
-            android:textSize="20sp" />
-
-     <Gallery
-         android:id="@+id/mainGalleryMenu"
-         android:layout_width="fill_parent"
-         android:layout_height="80dp"
-         android:layout_marginLeft="30dp"
-         android:animationDuration="1"
-         android:background="@drawable/content_panel_dark"
-         android:spacing="50dp"
-         android:layout_centerInParent="true"
-         android:layout_gravity="center_vertical"
-         android:focusable="true"
-         android:focusableInTouchMode="true"
-         android:descendantFocusability="afterDescendants"
-         android:nextFocusDown="@+id/mainGalleryMenu"
-         android:nextFocusUp="@+id/menu_button"
-         android:nextFocusRight="@+id/mainGalleryMenu"
-         android:nextFocusLeft="@+id/mainGalleryMenu">
-
-         <requestFocus />
-     </Gallery>
-
-    <ImageButton android:id="@+id/menu_button"
         android:layout_width="wrap_content"
-        android:paddingRight="10dp"
-        android:paddingLeft="5dp"
-        android:layout_height="28dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/menu_button"
         android:background="@color/fity_percent_transparent"
-        android:src="@drawable/menudrawer_selector"
+        android:textColor="#F0F0F0"
+        android:textSize="20sp" />
+
+    <us.nineworlds.serenity.widgets.ReflectingLayout
+        android:id="@+id/relectionArea"
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:background="@drawable/content_panel_dark"
+        android:layout_centerInParent="true"
+         >
+
+        <Gallery
+            android:id="@+id/mainGalleryMenu"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:animationDuration="1"
+            android:descendantFocusability="afterDescendants"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:nextFocusDown="@+id/mainGalleryMenu"
+            android:nextFocusLeft="@+id/mainGalleryMenu"
+            android:nextFocusRight="@+id/mainGalleryMenu"
+            android:nextFocusUp="@+id/menu_button"
+            android:spacing="50dp" >
+
+            <requestFocus />
+        </Gallery>
+    </us.nineworlds.serenity.widgets.ReflectingLayout>
+
+    <ImageButton
+        android:id="@+id/menu_button"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:scaleType="fitXY"
+        android:background="@color/fity_percent_transparent"
         android:nextFocusDown="@+id/mainGalleryMenu"
         android:nextFocusLeft="@+id/menu_button"
-        android:nextFocusUp="@+id/menu_button"
         android:nextFocusRight="@+id/mainGalleryMenu"
-        />
-     
+        android:nextFocusUp="@+id/menu_button"
+        android:paddingLeft="5dp"
+        android:paddingRight="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/menudrawer_selector" />
+
 </RelativeLayout>
