Adjust background layout to something a little fancier

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -102,7 +102,7 @@
         android:layout_marginLeft="10dp"
         android:padding="10dp"
         android:layout_below="@+id/episodeTVSeriesTitle"
-        android:background="#AA000000" >
+        android:background="@drawable/content_panel_dark" >
 
         <ImageView
             android:id="@+id/video_poster"
@@ -183,7 +183,7 @@
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dip"
-        android:background="#CC000000"
+        android:background="@drawable/content_panel_dark"
         android:gravity="bottom"
         android:padding="5dp" >
 
