--- a/serenity-app/res/layout-large/activity_music_artist_posters.xml
+++ b/serenity-app/res/layout-large/activity_music_artist_posters.xml
@@ -58,7 +58,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
-        android:background="#A0000000"
+        android:background="@drawable/content_panel_dark"
         android:orientation="vertical" >
 
         <TextView
@@ -102,7 +102,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:animationDuration="1"
-            android:background="#50000000"
+            android:background="@drawable/content_panel_dark"
             android:padding="5dp"
             android:spacing="10dp" >
 
