--- a/serenity-app/res/layout-large/activity_plex_app_main.xml
+++ b/serenity-app/res/layout-large/activity_plex_app_main.xml
@@ -26,7 +26,8 @@
     <us.nineworlds.serenity.widgets.ReflectingLayout
         android:id="@+id/relectionArea"
         android:layout_width="fill_parent"
-        android:layout_height="70dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/content_panel_dark"
         android:layout_centerInParent="true"
          >
