--- a/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10dp"
-        android:background="#80000000"
+        android:background="@drawable/content_panel_dark"
         app:cacheColorHint="#E8E8E8"
         app:gravity="center"
         app:horizontalSpacing="16dp"
@@ -100,7 +100,6 @@
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
-         android:background="#A0000000"
          android:orientation="vertical"
          android:layout_marginBottom="10dp" >
 
@@ -109,6 +108,7 @@
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:animationDuration="1"
+             android:background="@drawable/content_panel_dark"
              android:spacing="25dp"
              android:padding="5dp" >
 
