--- a/serenity-app/res/anim/fade_in_mediacontroller.xml
+++ b/serenity-app/res/anim/fade_in_mediacontroller.xml
@@ -1,9 +1,8 @@
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <alpha
-        android:duration="1000"
-        android:fromAlpha="0.0"
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:toAlpha="1.0" />
-
+<?xml version="1.0" encoding="utf-8"?>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/decelerate_interpolator">
+    <translate 
+        android:fromYDelta="854" 
+        android:toYDelta="0"
+        android:duration="1000"/>
 </set>
