--- a/serenity-app/res/anim/fade_in_mediacontroller.xml
+++ b/serenity-app/res/anim/fade_in_mediacontroller.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/decelerate_interpolator">
-    <translate 
-        android:fromYDelta="854" 
-        android:toYDelta="0"
-        android:duration="1000"/>
+  android:interpolator="@android:anim/linear_interpolator">
+  <alpha
+      android:fromAlpha="0.1"
+      android:toAlpha="1.0"
+      android:duration="1000"
+      />
 </set>
