--- a/serenity-app/res/anim/fade_out_mediacontroller.xml
+++ b/serenity-app/res/anim/fade_out_mediacontroller.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">  
-    <translate android:interpolator="@android:anim/decelerate_interpolator"
-        android:fromYDelta="0"
-        android:toYDelta="854" 
-        android:duration="10000"
-    />
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+  android:interpolator="@android:anim/linear_interpolator">
+  <alpha
+      android:fromAlpha="1.0"
+      android:toAlpha="0.1"
+      android:duration="1000"
+      />
 </set>
